# LearnOpenGL

./: .gitignore
test/: CMakeLists.txt  hello.cpp  hello_exce1.cpp  hello_move.cpp  hello_rectangle.cpp  hello_test.cpp  hello_trans.cpp  hello_trans2.cpp  hello_triangle.cpp  shader_s.h  shader_vs
